--- a/src/app/share/workflow/workflow.component.less
+++ b/src/app/share/workflow/workflow.component.less
@@ -25,6 +25,6 @@ ul{
 
 .joint-tool{
   height: 40px;
-  border-bottom: 1px solid rgba(10,10,10,.3);
+  //border-bottom: 1px solid rgba(10,10,10,.3);
 }
 
