--- a/src/query.less
+++ b/src/query.less
@@ -26,17 +26,22 @@
   }
 }
 
+a{
+  color: rgba(0,0,0,.85);
+}
+
 .query-btns {
   text-align: right;
-
+  width: 50%;display: inline-block;
   a {
-    margin-left: 8px;
+    margin-right: 8px;
   }
 
   a:hover {
     color: @primary-color !important;
   }
 }
+
 
 .query-title:hover {
   a {
@@ -52,9 +57,4 @@
   color: @primary-color !important;
 }
 
-.query-list{
-  .ant-form-item{
-    margin-bottom:8px;
-  }
-}
 
