--- a/src/app/share/querylist/template/datetemplate/datetemplate.component.html
+++ b/src/app/share/querylist/template/datetemplate/datetemplate.component.html
@@ -1,7 +1,7 @@
-<div [hidden]="hidden" [nzSpan]="6" nz-col>
+<div [hidden]="hidden" [nzSpan]="span" nz-col>
   <nz-form-item nzFlex>
-    <nz-form-label nzXXl="6" nzXl="6" nzLg="6" nzMd="6" nzSm="12" nzXs="18">{{item.name}}</nz-form-label>
-    <nz-form-control nzXXl="18" nzXl="18" nzLg="18" nzMd="18" nzSm="12" nzXs="6">
+    <nz-form-label nzXXl="8" nzXl="8" nzLg="8" nzMd="10" nzSm="12" nzXs="18">{{item.name}}</nz-form-label>
+    <nz-form-control nzXXl="15" nzXl="15" nzLg="15" nzMd="13" nzSm="13" nzXs="6">
       <nz-date-picker [(ngModel)]="item.content"></nz-date-picker>
     </nz-form-control>
   </nz-form-item>
