--- a/src/app/share/querylist/template/inputtemplate/inputtemplate.component.html
+++ b/src/app/share/querylist/template/inputtemplate/inputtemplate.component.html
@@ -1,7 +1,7 @@
-<div [hidden]="hidden" [nzSpan]="6" nz-col>
+<div [hidden]="hidden" [nzSpan]="span" nz-col>
   <nz-form-item nzFlex>
-    <nz-form-label nzLg="6" nzMd="6" nzSm="12" nzXXl="6" nzXl="6" nzXs="18">{{item.name}}</nz-form-label>
-    <nz-form-control nzLg="18" nzMd="18" nzSm="12" nzXXl="18" nzXl="18" nzXs="6">
+    <nz-form-label nzLg="8" nzMd="10" nzSm="12" nzXXl="8" nzXl="8" nzXs="18">{{item.name}}</nz-form-label>
+    <nz-form-control nzLg="15" nzMd="13" nzSm="11" nzXXl="15" nzXl="15" nzXs="6">
       <nz-input-group [nzSuffix]="suffixTemplate">
         <input [(ngModel)]="item.content" [placeholder]="'请输入'+item['name']" nz-input type="text"/>
       </nz-input-group>
