--- a/src/theme.less
+++ b/src/theme.less
@@ -21,29 +21,57 @@
   padding: @padding-xs !important;
 }
 
-.ant-input-search-button{
+.ant-input-search-button {
   margin-right: 0;
 }
 
 .ant-popover-inner-content {
-  padding:0 !important;
+  padding: 0 !important;
 }
 
-.selected-tr{
-  td{
-    background-color:@primary-1 !important;
+.selected-tr {
+  td {
+    background-color: @primary-1 !important;
   }
-  background-color:@primary-1;
+
+  background-color: @primary-1;
 }
 
-.ant-form-item{
-  margin-bottom:@padding-xs !important;
+.ant-form-item {
+  margin-bottom: @padding-xs !important;
 }
 
-.ant-calendar-picker{
-  width:100%;
+.ant-calendar-picker {
+  width: 100%;
 }
 
-.ant-input{
+.ant-input {
   //text-align: center !important;
+}
+
+
+.ant-modal-body {
+  padding: 16px 16px 0 16px !important;
+}
+
+.ant-modal-footer {
+  padding: 8px;
+  text-align: center;
+
+  .ant-btn {
+    width: 120px;
+  }
+}
+
+.ant-modal-header {
+  padding: 16px;
+}
+
+.ant-modal-footer {
+  padding: 8px;
+  text-align: center !important;
+
+  .ant-btn {
+    width: 120px;
+  }
 }
