--- a/src/app/share/querylist/querylist.component.html
+++ b/src/app/share/querylist/querylist.component.html
@@ -24,7 +24,7 @@
     [ngStyle]="{'display':componentArray.length>0&&!isCollapse?'block':'none','background-color':backgroundColor}"
     nz-form
     style="padding-top: 0 !important;">
-    <div nz-row>
+    <div nz-row [nzGutter]="18">
       <div #template></div>
     </div>
   </form>
