--- a/src/help.less
+++ b/src/help.less
@@ -40,3 +40,20 @@
 
   background-color: @primary-1;
 }
+
+//物料帮助
+.m-help {
+  .ant-modal{
+    width: 1100px !important;
+    max-width: 90%;
+    min-width: 1100px;
+    top: 5%;
+  }
+  .ant-modal-content {
+    width: 1100px !important;
+    max-width: 90%;
+    min-width: 1100px;
+    min-height: 400px;
+    max-height: 90%;
+  }
+}
