--- a/src/theme.less
+++ b/src/theme.less
@@ -42,7 +42,7 @@
 }
 
 .ant-calendar-picker {
-  width: 100%;
+  width: 100% !important;
 }
 
 .ant-input {
@@ -74,4 +74,8 @@
   .ant-btn {
     width: 120px;
   }
+}
+
+.primary-color {
+  color: @primary-color !important;
 }
