--- a/src/app/mom/demo/demo.component.html
+++ b/src/app/mom/demo/demo.component.html
@@ -9,6 +9,81 @@ Demo功能演示
 
 <button nz-button [nzType]="'primary'" (click)="post()">post</button>
 
+<form nz-form>
+
+  <!--第一行-->
+  <div nz-row>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </div>
+
+  <!--第二行-->
+  <div nz-row>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字字字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字字字字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字字字字字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div nz-col [nzSpan]="6">
+      <nz-form-item>
+        <nz-form-label [nzXXl]="8" [nzXl]="8" [nzLg]="8" [nzMd]="10" [nzSm]="12" [nzXs]="18">字字字字字字字字</nz-form-label>
+        <nz-form-control [nzXXl]="15" [nzXl]="15" [nzLg]="15" [nzMd]="13" [nzSm]="11" [nzXs]="6">
+          <input nz-input>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </div>
+</form>
+
 <querylist
   (onQuery)="query($event)"
   [backgroundColor]="'#fafafa'"
