--- a/src/app/share/helpcenter/alphahelp/alphahelp.component.html
+++ b/src/app/share/helpcenter/alphahelp/alphahelp.component.html
@@ -4,4 +4,8 @@
   [columns]="columns"
   [title]="'初始帮助'"
   [placeHolder]="'初始帮助'"
+  [readOnly]="readOnly"
+  [multiSelect]="1==1"
+  [tree]="1==1"
+  [name]="'code'"
 ></smarthelp>
